[gd_scene load_steps=6 format=3 uid="uid://dbvdfcyk1s0gt"]

[ext_resource type="Script" path="res://BasicComputeShader/ray_tracer_simple.gd" id="1_ykyxn"]
[ext_resource type="Script" path="res://free_look_camera.gd" id="2_6yunc"]
[ext_resource type="Script" path="res://BasicComputeShader/ComputeOutput.gd" id="2_ta36a"]
[ext_resource type="Script" path="res://BasicComputeShader/FPSLabel.gd" id="4_p1ni1"]
[ext_resource type="Texture2D" uid="uid://cn1aig1qmiunm" path="res://icon.svg" id="5_hblw1"]

[node name="Scene" type="Node3D"]
script = ExtResource("1_ykyxn")

[node name="Camera3d" type="Camera3D" parent="."]
current = true
script = ExtResource("2_6yunc")
mouse_sensitivity = 0.1

[node name="RayTracerSimple" type="Control" parent="Camera3d"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ComputeOutput" type="TextureRect" parent="Camera3d/RayTracerSimple"]
custom_minimum_size = Vector2(1152, 648)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5
script = ExtResource("2_ta36a")

[node name="FPSLabel" type="Label" parent="Camera3d/RayTracerSimple"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -54.0
offset_bottom = 26.0
grow_horizontal = 0
text = "FPS: 60"
script = ExtResource("4_p1ni1")

[node name="Label" type="Label" parent="Camera3d/RayTracerSimple"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Right-Click and Drag Mouse to look around

Use WASD and QE to move"

[node name="CheckBox" type="CheckBox" parent="Camera3d/RayTracerSimple"]
layout_mode = 0
offset_top = 96.0
offset_right = 24.0
offset_bottom = 120.0

[node name="Label2" type="Label" parent="Camera3d/RayTracerSimple"]
layout_mode = 0
offset_left = 28.0
offset_top = 94.0
offset_right = 198.0
offset_bottom = 117.0
text = "Immediate GPU Mode
"

[node name="DirectionalLight3d" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.652138, 0.4459, -0.613098, 0, 0.80873, 0.588181, 0.7581, -0.383575, 0.527403, 0, 0, 0)

[node name="Spinning" type="Sprite2D" parent="."]
position = Vector2(102, 561)
texture = ExtResource("5_hblw1")

[connection signal="toggled" from="Camera3d/RayTracerSimple/CheckBox" to="." method="_on_check_box_toggled"]
